--- a/pom.xml
+++ b/pom.xml
@@ -216,6 +216,14 @@
 			<artifactId>cors-filter</artifactId>
 			<version>2.5</version>
 		</dependency>
+		
+		<!-- EJB3 TransactionTimeout Annotation -->
+        <dependency>
+		    <groupId>org.wildfly</groupId>
+		    <artifactId>wildfly-ejb3</artifactId>
+		    <version>9.0.1.Final</version>
+		    <scope>provided</scope>
+        </dependency>
 
 	</dependencies>
 
